# twitter-video-dl

./: README.md  pyproject.toml  setup.cfg  test_videos.txt  twitter-video-dl-for-cs.py  twitter-video-dl.py
src/twitter_video_dl/: RequestDetails.json  login.py  twitter_video_dl.py
tests/: TestLogin.py  TestVideoDownloader.py  TestVideos.json
