[metadata]
name = twitter-video-dl-inteoryx
version = 0.0.2
author = inteoryx
author_email = inteoryx@protonmail.com
description = Download videos from twitter.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/inteoryx/twitter-video-dl
project_urls =
    Bug Tracker = https://github.com/inteoryx/twitter-video-dl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Freely Distributable
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src